--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -2,6 +2,8 @@
   const ESCAPE = 27;
   const RIGHT = 39;
   const LEFT = 37;
+  const UP = 38;
+  const DOWN = 40;
   const TARGET_CLASS = 'target';
 
   const clickNavigationButton = (buttonClass) => {
@@ -54,6 +56,15 @@
     }
   }
 
+  const reverseSorting = () => {
+    {% if site.env.ALLOW_ORDER_SORT_CHANGE == "1" %}
+    var parent = document.getElementById('target');
+    for (var i = 1; i < parent.childNodes.length; i++){
+        parent.insertBefore(parent.childNodes[i], parent.firstChild);
+    }
+    {% endif %}
+  }
+
   window.onpopstate = function(event) {
     if (event.state && event.state.id) {
       const id = event.state.id;
@@ -75,6 +86,14 @@
     handleKey(LEFT, event, () => {
       clickNavigationButton('.previous');
     });
+
+    handleKey(UP, event, () => {
+      reverseSorting();
+    });
+
+    handleKey(DOWN, event, () => {
+      reverseSorting();
+    });
   });
 
   document.addEventListener('click', (event) => {
@@ -87,6 +106,10 @@
     handleClick('[href].close', event, () => {
       const href = event.target.getAttribute('href');
       closePhoto(href);
+    });
+
+    handleClick('ul.links li.sort a', event, () => {
+      reverseSorting();
     });
   });
 
