Revert "Download button now visible in mobile view"
This reverts commit 9f72cebbd87358b7f37cdfa7986f3464f8ecb081 [formerly 4b5e867b018e60830cc2b39ee7071b9441b8650b].


Former-commit-id: a0a62fac587e3ae680c9935a5057ecc08292760a

--- a/css/master.scss
+++ b/css/master.scss
@@ -161,8 +161,7 @@ body {
 		}
 
 		.previous,
-		.next,
-		.download {
+		.next {
 			position: absolute;
 			top: 0;
 			bottom: 0;
@@ -201,8 +200,7 @@ body {
 			}
 		}
 
-		.next,
-		.download {
+		.next {
 			right: 0;
 			left: auto;
 			
@@ -214,8 +212,8 @@ body {
 		.meta {
 			display: flex;
 			position: absolute;
-			right: 10px;
-			bottom: 42px;
+			right: 4px;
+			bottom: 12px;
 			color: #fff;
 			text-shadow: #000 0 1px 1px, #000 0 2px 4px;
 			opacity: .5;
@@ -296,21 +294,21 @@ body {
 			.previous,
 			.next {
 				display: flex;
-			}
-			.download {
-				display: flex;
-				height: 75px;
-				
-				span {
-					background-image: url(../img/icon-download.svg);
 
-					&:focus,
-					&:hover {
-						background-color: rgba(200, 200, 200, .5);
-					}
+				&.download {
+					height: 75px;
+					
+					span {
+						background-image: url(../img/icon-download.svg);
 
-					&:active {
-						background-color: rgba(200, 200, 200, .75);
+						&:focus,
+						&:hover {
+							background-color: rgba(200, 200, 200, .5);
+						}
+
+						&:active {
+							background-color: rgba(200, 200, 200, .75);
+						}
 					}
 				}
 			}
@@ -462,19 +460,13 @@ body {
 				span {
 					display: none;
 				}
-			}‚
-
-			.download {
-				width: 25vw;
-				max-width: auto;
 			}
 			
 			.previous {
 				cursor: w-resize;
 			}
 			
-			.next,
-			.download {
+			.next {
 				cursor: e-resize;
 			}
 
