fixed typo, changed cursor
#2


Former-commit-id: 36e6aa527156d9c1aad689448ad30c07a6ed9f1f

--- a/_includes/photo.html
+++ b/_includes/photo.html
@@ -34,7 +34,7 @@
     {% endunless %}
     <ul class="links top photodetail-links">
         {% if site.env.ALLOW_IMAGE_SHARING == "1" %}
-            <li class="share"><a onClick="shareImage('{{ image.basename }}','{{ slug | relative_url }}');" title="Reverse sort order">Sort</a></li>
+            <li class="share"><a onClick="shareImage('{{ image.basename }}','{{ slug | relative_url }}');" title="Share this photo">Share</a></li>
         {% endif %}
         {% if site.env.ALLOW_ORIGINAL_DOWNLOAD == "1" %}
             <li class="download"><a href="{{ image.path }}" download="{{ safe_name }}" class="" title="Download this image">Download</a></li>
