make grid buttons visible on touch devices
On devices that cant hover over the images in the grid, the photo-stream will now show the buttons permanent.


Former-commit-id: ade7213075eb105f321e054a4230bdd60559c8f9

--- a/css/master.scss
+++ b/css/master.scss
@@ -236,7 +236,9 @@ body {
 
 				.gridview-button {
 					@include button;
-					visibility: hidden;
+					@media not all and (hover: none) {
+						visibility: hidden;
+					}
 					background-color: rgba(200, 200, 200, .5);
 
 					&:focus,
