added notranslate meta tag, and translation keys to html tag
This should fix #20, in my local dev and on my selfhosted instance the translation in chrome disappeared.


Former-commit-id: b9d6481d1c6765c01956a275bed83c779597a4f7

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
 	<meta charset="utf-8">
+	<meta name="google" content="notranslate" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	{% if site.env.ALLOW_INDEXING == "0" %}
 	<meta name="robots" content="noindex" />
