enable swiping for mobile devices
Former-commit-id: 8b4421c5ef8761567b1920bf6c860bb5ae8d034d

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -6,6 +6,47 @@
   const DOWN = 40;
   const TARGET_CLASS = 'target';
 
+  /*
+   * swipe detection
+   *
+   * found at: https://stackoverflow.com/a/23230280
+   */
+  document.addEventListener('touchstart', handleTouchStart, false);        
+  document.addEventListener('touchmove', handleTouchMove, false);
+
+  var xDown = null;
+
+  function getTouches(evt) {
+      return evt.touches ||             // browser API
+          evt.originalEvent.touches; // jQuery
+  }                                                     
+                                                                          
+  function handleTouchStart(evt) {
+      const firstTouch = getTouches(evt)[0];                                      
+      xDown = firstTouch.clientX;                                    
+  };                                                
+                                                                          
+  function handleTouchMove(evt) {
+      if ( ! xDown ) {
+          return;
+      }
+
+      var xUp = evt.touches[0].clientX;
+
+      var xDiff = xDown - xUp;
+                                                                          
+      if ( xDiff > 0 ) {
+          clickNavigationButton('.next');
+      } else {
+          clickNavigationButton('.previous');
+      }
+      /* reset values */
+      xDown = null;
+      yDown = null;                                             
+  };
+
+  /* image sharing */
+
   const shareImage = (title, url) => {
     if (navigator.canShare) {
       const shareData = {
