--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,6 @@
 	{% endif %}
 	<link rel="shortcut icon" type="image/svg+xml" href="{{ '/favicon.svg' | relative_url }}" />
 	<link rel="shortcut icon" type="image/png" href="{{ '/favicon.png' | relative_url }}" />
-	<link rel="apple-touch-icon" href="touch-icon-iphone.png" />
-	<link rel="mask-icon" href="favicon.svg" />
+	<link rel="apple-touch-icon" href="{{ '/apple-touch-icon.png' | relative_url }}" />
+	<link rel="mask-icon" href="{{ '/favicon.svg' | relative_url }}" />
 </head>
